# pipeline_task

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  TASK.md  pyproject.toml
eval/: bottleneck_report.py  check_determinism.py  check_performance.py  check_segment.py  render_review.py  run_eval.py  run_eval.sh  thresholds.json  validate_output.py
examples/: expected_output_format.json
include/pipeline/: DetectionClasses.hpp  ICamera.hpp  IDetector.hpp  IMetrics.hpp  IVideoReader.hpp  IVisualizer.hpp  MetricsCollector.hpp  PanoramaTileLayout.hpp  Pipeline.hpp  YoloPostprocess.hpp  YoloV8Detector.hpp  types.hpp
include/pipeline/stubs/: NullDetector.hpp  NullVisualizer.hpp  OpenCvVisualizer.hpp  PassthroughCamera.hpp  StubVideoReader.hpp  TiledPanoramaDetector.hpp
models/: README.md
schemas/: camera_track.schema.json
scripts/: export_yolov8_model.py
src/: main.cpp
src/pipeline/: MetricsCollector.cpp  Pipeline.cpp  YoloV8Detector.cpp
src/stubs/: NullDetector.cpp  NullVisualizer.cpp  OpenCvVisualizer.cpp  PassthroughCamera.cpp  StubVideoReader.cpp  TiledPanoramaDetector.cpp
